--- a/views/client/pages/products/detail.pug
+++ b/views/client/pages/products/detail.pug
@@ -9,7 +9,7 @@ block main
                 .col-lg-8.offset-lg-2.text-center
                     .breadcrumb-text
                         p Xem Thêm Chi Tiết
-                        h1 Sản Phẩm Đơn
+                        h1 #{product.title}
     
     // sản phẩm đơn
     .single-product.mt-150.mb-150
@@ -17,37 +17,87 @@ block main
             .row
                 .col-md-5
                     .single-product-img
-                        img(src="/img/products/product-img-1.jpg", alt="Ảnh Dâu")
+                        img(src=product.thumbnail, alt=product.title)
                 .col-md-7
                     .single-product-content
-                        h3 Dâu Tây tươi ngon
+                        // Tính toán giá & tồn
+                        - const moneyFmt = (n) => new Intl.NumberFormat('vi-VN', { style: 'currency', currency: 'VND' }).format(Number(n||0));
+                        - const basePrice = Number(product.price || 0);
+                        - const discount = Number(product.discountPercentage || 0);
+                        - const hasDiscount = discount > 0;
+                        - const finalPrice = hasDiscount ? Math.round(basePrice * (1 - discount/100)) : basePrice;
+                        - const stock = Number(product.stock || 0);
+                        - const inStock = stock > 0;
+
+                        h3 #{product.title}
+
+                        // Giá
                         p.single-product-pricing
-                            span Giá mỗi Kg
-                            |  $85
-                        p Khám phá hương vị tuyệt vời của dâu tây tươi ngon nhập khẩu! Những trái dâu tây đỏ mọng, giòn tan và đầy màu sắc được chọn lựa kỹ càng từ những vườn dâu tốt nhất. Hãy thưởng thức sự ngọt ngào và bổ dưỡng mà trái dâu tây mang lại cho sức khỏe của bạn. Đặt hàng ngay hôm nay để trải nghiệm sự khác biệt!
-                    .single-product-form
-                        form(action="#")
-                            input(type="number", placeholder="0")
-                        a.cart-btn(href="/cart")
-                            i.fas.fa-shopping-cart
-                            |  Thêm Vào Giỏ Hàng
-                        p
-                            strong Danh Mục:
-                            |  Trái Cây, Hữu Cơ
-                    h4 Chia Sẻ:
-                    ul.product-share
-                        li
-                            a(href="#")
-                                i.fab.fa-facebook-f
-                        li
-                            a(href="#")
-                                i.fab.fa-twitter
-                        li
-                            a(href="#")
-                                i.fab.fa-google-plus-g
-                        li
-                            a(href="#")
-                                i.fab.fa-linkedin
+                            span Giá mỗi Sản phẩm
+                            if hasDiscount
+                                span.price-final #{moneyFmt(finalPrice)}
+                                span.price-original #{moneyFmt(basePrice)}
+                                span.discount-chip(title=`Giảm ${discount}%`)
+                                    i.fas.fa-bolt.mr-1
+                                    | −#{discount}%
+                            else
+                                |  #{moneyFmt(basePrice)}
+
+                        // Mô tả
+                        if product.description
+                            p #{product.description}
+
+                        // Meta: kho + tình trạng
+                        ul.product-meta
+                            li
+                                i.fas.fa-warehouse.mr-2
+                                | Kho:
+                                b.ml-1= stock
+                            li
+                                if inStock
+                                    span.availability-badge.available
+                                        i.fas.fa-check-circle.mr-1
+                                        | Còn hàng
+                                else
+                                    span.availability-badge.out
+                                        i.fas.fa-times-circle.mr-1
+                                        | Hết hàng
+
+                            if hasDiscount
+                                li
+                                    i.fas.fa-tags.mr-2
+                                    | Giảm giá:
+                                    b.ml-1 #{discount}%
+
+                        // Form mua & nút
+                        .single-product-form
+                            form(action="#")
+                                input(type="number", placeholder="1", min="1", max=stock, value=inStock ? 1 : 0, disabled=!inStock)
+                            a.cart-btn(
+                                href=inStock ? "/cart" : "javascript:void(0)"
+                                aria-disabled=!inStock
+                                class=inStock ? "" : "disabled"
+                                title=inStock ? "Thêm vào giỏ hàng" : "Tạm hết hàng"
+                            )
+                                i.fas.fa-shopping-cart
+                                |  Thêm Vào Giỏ Hàng
+                                p
+                        strong Danh Mục:
+                        |  Trái Cây, Hữu Cơ
+                        h4 Chia Sẻ:
+                        ul.product-share
+                            li
+                                a(href="#")
+                                    i.fab.fa-facebook-f
+                            li
+                                a(href="#")
+                                    i.fab.fa-twitter
+                            li
+                                a(href="#")
+                                    i.fab.fa-google-plus-g
+                            li
+                                a(href="#")
+                                    i.fab.fa-linkedin
 
     // sản phẩm liên quan
     .more-products.mb-150
@@ -58,7 +108,7 @@ block main
                         h3
                             span.orange-text Sản Phẩm
                             |  Liên Quan
-                        p Khám phá những sản phẩm tươi ngon khác mà bạn sẽ yêu thích! Tất cả đều được chọn lọc kỹ lưỡng để đảm bảo chất lượng và hương vị tốt nhất.
+                        p Khám phá những sản phẩm chất lượng khác mà bạn sẽ yêu thích! Tất cả đều được chọn lọc kỹ lưỡng để đảm bảo chất lượng và trải nghiệm tốt nhất.
             .row
                 .col-lg-4.col-md-6.text-center
                     .single-product-item
