--- a/views/client/pages/products/index.pug
+++ b/views/client/pages/products/index.pug
@@ -28,7 +28,7 @@ block main
                     .col-lg-4.col-md-6.text-center
                         .single-product-item
                             .product-image
-                                a(href=`#`)
+                                a(href=`/products/${product.slug}`)
                                     img(src=product.thumbnail, alt=product.title)
                             h3 #{product.title}
                             p.product-price
