- Đẩy file tĩnh lên cloud qua cloudinary - Viết lại script bắt sự kiện xóa sản phẩm - Thêm type =  "button" ở nút xóa

--- a/views/admin/pages/products/index.pug
+++ b/views/admin/pages/products/index.pug
@@ -116,7 +116,7 @@ block main
                                                     | Sửa
                                                 form.d-inline(method="POST", action=`/${prefixAdmin}/products/delete/${p._id}?_method=DELETE`)
                                                     button.btn.btn-danger.btn-sm.btn-glow(
-                                                        class="btn btn-danger btn-sm ml-1"
+                                                        type="button"
                                                         button-delete
                                                         aria-label=`Xóa sản phẩm ${p.title}`
                                                     )
