Thêm trình soạn thảo nội dung bằng TinyMCE, soạn thảo chèn ảnh cũng được lưu trên cloudinary

--- a/views/admin/pages/products/detail.pug
+++ b/views/admin/pages/products/detail.pug
@@ -79,6 +79,6 @@ block main
                                     h6.mb-2
                                         i.fas.fa-align-left.mr-1
                                         | Mô tả
-                                    p.lead-desc= product.description
+                                    p.lead-desc !{product.description}
 
                 //- script(src="/admin/js/product.js")
