--- a/views/client/pages/products/detail.pug
+++ b/views/client/pages/products/detail.pug
@@ -45,7 +45,7 @@ block main
 
                         // Mô tả
                         if product.description
-                            p #{product.description}
+                            p !{product.description}
 
                         // Meta: kho + tình trạng
                         ul.product-meta
