--- a/views/admin/layouts/default.pug
+++ b/views/admin/layouts/default.pug
@@ -39,5 +39,8 @@ html(lang="vi")
     script(src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js")
     // Chart.js (pin version 4.4.1)
     script(src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js")
+    // TinyMCE
+    script(src="/tinymce/tinymce.min.js")
+    script(src="/admin/js/tinymce-config.js")
     // App JS
     script(src="/admin/js/script.js")
