--- a/views/admin/pages/products/edit.pug
+++ b/views/admin/pages/products/edit.pug
@@ -44,21 +44,11 @@ block main
                                     // Mô tả
                                     .form-group
                                         label(for="desc") Mô tả
-                                        textarea#desc.form-control(
+                                        textarea.textarea-mce#desc.form-control(
                                             name="description"
                                             rows="6"
                                             placeholder="Mô tả ngắn gọn về sản phẩm"
-                                        ) #{product.description}
-
-                                .col-md-4
-                                    // Khung xem trước ảnh hiện tại
-                                    .thumb-preview-wrap
-                                        .thumb-preview.preview-contain.has-image
-                                            if product.thumbnail
-                                                span.thumb-badge Ảnh hiện tại
-                                                img#thumbPreview(src=product.thumbnail alt="Xem trước ảnh")
-                                            else
-                                                img#thumbPreview(src="" alt="Xem trước ảnh" aria-hidden="true")
+                                        ) !{product.description}
 
                             .form-row
                                 .col-md-4
@@ -132,6 +122,16 @@ block main
                                             label.custom-file-label(for="thumbnail") Chọn ảnh mới...
                                         small#thumbHelp.form-text.text-muted
                                             | Để giữ nguyên ảnh cũ, hãy bỏ trống trường này.
+
+                                .col-md-4
+                                    // Khung xem trước ảnh hiện tại
+                                    .thumb-preview-wrap
+                                        .thumb-preview.preview-contain.has-image
+                                            if product.thumbnail
+                                                span.thumb-badge Ảnh hiện tại
+                                                img#thumbPreview(src=product.thumbnail alt="Xem trước ảnh")
+                                            else
+                                                img#thumbPreview(src="" alt="Xem trước ảnh" aria-hidden="true")
 
                                 .col-md-4
                                     // Vị trí
