--- a/views/admin/partials/sider.pug
+++ b/views/admin/partials/sider.pug
@@ -17,3 +17,10 @@
                     )
                         i.fas.fa-tags.mr-2
                         | Sản phẩm
+                li.nav-item
+                    a.nav-link(
+                        href=`/${prefixAdmin}/products-category`
+                        class=(activePage==='products-category' ? 'active' : '')
+                    )
+                        i.fas.fa-tags.mr-2
+                        | Danh mục sản phẩm
